apps/adguard/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              name: dns
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: logs
              mountPath: /opt/adguardhome/work
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: adguard-config
        - name: logs
          emptyDir:
            sizeLimit: 100Mi
