apps/adguard/service-dns.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  annotations:
    metallb.io/loadBalancerIPs: 10.1.16.5
spec:
  type: LoadBalancer
  ports:
    - name: dns
      port: 53
      targetPort: 53
