apps/adguard/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
spec:
  selector:
    app: adguard
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
