apps/adguard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - adguard.hydra.starsystem.dev
      secretName: adguard-tls
  rules:
    - host: adguard.hydra.starsystem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-web
                port:
                  number: 3000
